--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./www:/var/www
       - ./confApache:/etc/apache2
     networks:
-      apared:
+      apache_red:
         ipv4_address: 172.39.4.2
 
   dns:
@@ -20,7 +20,7 @@ services:
       - ./confDNS/conf:/etc/bind
       - ./confDNS/zonas:/var/lib/bind
     networks:
-      apared:
+      apache_red:
         ipv4_address: 172.39.4.3
 
 networks:
